# roleplay-evaluator

./: .gitignore  README.md  execute.sh  pyproject.toml  run_models.sh  run_models_parallel.sh  stop_models_parallel.sh  test_message_state.py
asset/: characters.yaml
asset/template/prompt/: character.j2  evaluator.j2  persona.j2
src/: main.py
src/agent/: companion_agent.py  evaluator_agent.py  final_evaluator_agent.py  persona_agent.py  persona_character_agent.py  turn_evaluator_agent.py
src/factory/: model_factory.py
src/interface/: agent.py  character.py  chat_state.py  evaluation_criteria.py  evaluation_result.py
src/prompt/: character_prompt_template.py  evaluator_prompt_template.py  persona_prompt_template.py  prompt_template.py
src/utils/: csv_writer.py  logger.py  retry_utils.py
tests/: test_claude_output.py  test_pop.py  test_retry_utils.py
